--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
 @import "tailwindcss";
+
+/* Estilos predeterminados para el modo claro */
+body {
+  @apply bg-white text-black;
+}
+
+/* Estilos para cuando la clase 'dark' está activada en <html> */
+html.dark body {
+  @apply bg-gray-900; /* Cambiar el fondo y el texto para el modo oscuro */
+}
