--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -31,11 +31,17 @@
         </div>
       </div>
 
-      <!-- Botón de tema oscuro -->
       <div class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
-        <button type="button" class="relative rounded-full bg-gray-800 p-1 text-gray-400 hover:text-white focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800" aria-label="Alternar tema" (click)="toggleTheme()">
+        <button
+          type="button"
+          class="relative rounded-full bg-gray-800 p-1 text-gray-400 hover:text-white focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800"
+          aria-label="Alternar tema"
+          (click)="toggleTheme()"
+        >
           <span class="sr-only">Alternar tema</span>
-          <span class="text-xl">🌙</span> <!-- Opción para cambiar el ícono -->
+          <span class="text-xl">
+            {{ isDarkMode ? '☀️' : '🌙' }}
+          </span>
         </button>
       </div>
     </div>
