--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,3 +1,8 @@
-<footer class="bg-gray-800 text-white p-4 text-center">
-    <p>&copy; 2025 Supermercado App</p>
+<footer class="bg-gray-700 text-white py-4 mt-10 dark:bg-gray-950">
+  <div class="container mx-auto px-4 text-center">
+    <p class="mb-2">
+      <a href="#" class="hover:underline">Volver arriba</a>
+    </p>
+    <p>Este sitio web es &copy; 2024 por Daniel Vilar Martínez.</p>
+  </div>
 </footer>
