--- a/src/app/features/registro/registro.component.html
+++ b/src/app/features/registro/registro.component.html
@@ -1,12 +1,14 @@
-<div class="max-w-md mx-auto bg-white dark:bg-gray-800 p-6 rounded shadow-md">
-  <h2 class="text-2xl font-bold mb-4 dark:text-white">Registro</h2>
+<div class="max-w-md mx-auto p-6 rounded shadow-md dark:bg-gray-800/50">
+  <h2 class="text-2xl font-bold mb-4">Registro</h2>
   <form>
-    <label class="block mb-2 dark:text-white">Nombre</label>
-    <input type="text" class="w-full p-2 border rounded mb-4 dark:text-white" />
-    <label class="block mb-2 dark:text-white">Correo electrónico</label>
-    <input type="email" class="w-full p-2 border rounded mb-4 dark:text-white" />
-    <label class="block mb-2 dark:text-white">Contraseña</label>
-    <input type="password" class="w-full p-2 border rounded mb-4 dark:text-white" />
+    <label class="block mb-2">Nombre:</label>
+    <input type="text" class="w-full p-2 border rounded mb-4" />
+    <label class="block mb-2 dark:text-white">Correo electrónico:</label>
+    <input type="email" class="w-full p-2 border rounded mb-4" />
+    <label class="block mb-2 dark:text-white">Contraseña:</label>
+    <input type="password" class="w-full p-2 border rounded mb-4" />
+    <label class="block mb-2 dark:text-white">Confirmar contraseña:</label>
+    <input type="password" class="w-full p-2 border rounded mb-4" />
     <button class="w-full bg-green-600 text-white p-2 rounded">Registrarse</button>
   </form>
 </div>
