--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="bg-gray-800">
+<nav class="bg-gray-700 dark:bg-gray-950">
   <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
     <div class="relative flex h-16 items-center justify-between">
       <!-- Botón de menú para móvil -->
@@ -17,16 +17,16 @@
       <!-- Contenedor del logo y navegación -->
       <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
         <div class="flex-shrink-0">
-          <h1 class="text-white font-semibold text-xl">Supermercado</h1> <!-- Agrega tu logo aquí -->
+          <h1 class="text-white font-semibold px-3 py-1 text-xl">Supermercado</h1> <!-- Agrega tu logo aquí -->
         </div>
 
         <!-- Menú de navegación para pantallas grandes -->
         <div class="hidden sm:ml-6 sm:block">
           <div class="flex space-x-4">
-            <a routerLink="/login" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 text-sm font-medium rounded-md">Login</a>
-            <a routerLink="/registro" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 text-sm font-medium rounded-md">Registro</a>
-            <a routerLink="/productos" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 text-sm font-medium rounded-md">Productos</a>
-            <a routerLink="/buscador" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 text-sm font-medium rounded-md">Buscador</a>
+            <a routerLink="/login" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 text-base font-medium rounded-md dark:text-white">Login</a>
+            <a routerLink="/registro" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 text-base font-medium rounded-md dark:text-white">Registro</a>
+            <a routerLink="/productos" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 text-base font-medium rounded-md dark:text-white">Productos</a>
+            <a routerLink="/buscador" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 text-base font-medium rounded-md dark:text-white">Buscador</a>
           </div>
         </div>
       </div>
@@ -34,7 +34,7 @@
       <div class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
         <button
           type="button"
-          class="relative rounded-full bg-gray-800 p-1 text-gray-400 hover:text-white focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800"
+          class="relative rounded-full p-1 text-gray-400 hover:text-white focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800"
           aria-label="Alternar tema"
           (click)="toggleTheme()"
         >
